tests/src/correct/constant.stau
one :: Int
one = 1

main = one

