tests/src/type-error/type-sig.stau
f :: Int -> Int

main = 3

